# eden-teams

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: Copilot.agent.md
.github/prompts/: plan-edenTeams.prompt.md
apps/edens-gate/: .env.example  CHANGELOG.md  README.md  SERVICE_URLS.md  package-lock.json  package.json  tailwind.config.ts
apps/edens-gate/app/: globals.css  layout.tsx  page.tsx
apps/edens-gate/app/prophet/: layout.tsx  page.tsx
apps/edens-gate/app/teams/: layout.tsx  page.tsx
apps/edens-gate/app/worker/: layout.tsx  page.tsx
apps/edens-gate/src/components/dashboard/: Dashboard.tsx
apps/edens-gate/src/components/providers/: ClientProviders.tsx
apps/edens-gate/src/components/shell/: AppShell.tsx  NavDrawer.tsx  Shell.tsx
apps/edens-gate/src/components/stats/: StatCard.tsx
data/processed/: .gitkeep
data/raw/: .gitkeep
src/bible_llm/: __init__.py  config.py  main.py
src/bible_llm/data/: __init__.py  bible_loader.py  preprocessor.py
src/bible_llm/models/: __init__.py  embeddings.py  llm_client.py
src/bible_llm/utils/: __init__.py  logging_config.py
src/eden_teams/: __init__.py  config.py  main.py
src/eden_teams/cdr/: __init__.py  models.py  service.py
src/eden_teams/graph/: __init__.py  auth.py  client.py
src/eden_teams/models/: __init__.py  embeddings.py  llm_client.py
src/eden_teams/utils/: __init__.py  logging_config.py
tests/: __init__.py  conftest.py  test_bible_loader.py  test_cdr_models.py  test_cdr_service.py  test_config.py  test_embeddings.py  test_graph_client.py  test_llm_client.py  test_main.py  test_preprocessor.py
ui/eden-teams-ui/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  staticwebapp.config.json  swa-cli.config.json  vite.config.ts
ui/eden-teams-ui/scripts/: copy-swa-config.cjs
ui/eden-teams-ui/src/: App.tsx  main.tsx  styles.css
ui/eden-teams-ui/src/api/: client.ts
ui/eden-teams-ui/src/auth/: WithAuth.tsx  msalConfig.ts
ui/eden-teams-ui/src/components/: AppShell.tsx  NotFound.tsx
ui/eden-teams-ui/src/pages/: AdminPage.tsx  CallExplorerPage.tsx  HomePage.tsx  NotFoundPage.tsx
ui/eden-teams-ui/test-results/: .last-run.json
ui/eden-teams-ui/test-results/.playwright-artifacts-0/traces/: 47802b4777d46cebddd4-d500eabeb7daec46262f-recording1.network  47802b4777d46cebddd4-d500eabeb7daec46262f-recording1.trace  47802b4777d46cebddd4-ef49d5b3b14dc80bf479.network  47802b4777d46cebddd4-ef49d5b3b14dc80bf479.trace
ui/eden-teams-ui/test-results/.playwright-artifacts-2/traces/: 47802b4777d46cebddd4-d500eabeb7daec46262f.network  47802b4777d46cebddd4-d500eabeb7daec46262f.trace
ui/eden-teams-ui/test-results/config-wizard-First-run-co-16682--config-leads-to-login-page-chromium/: error-context.md  video.webm
ui/eden-teams-ui/test-results/config-wizard-First-run-co-31c65--wizard-when-not-configured-chromium/: video.webm
ui/eden-teams-ui/tests/e2e/: config-wizard.spec.ts  runtime-config-login.spec.ts
